# vidleech

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  build.py  pyproject.toml  version_info.txt
.git_disabled/: COMMIT_EDITMSG  index
.git_disabled/logs/: HEAD
.git_disabled/refs/heads/: master
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  ci.yml  release.yml
cline_docs/: activeContext.md  productContext.md  progress.md  systemPatterns.md  techContext.md
src/: main.py
src/core/: __init__.py  downloader.py
src/gui/: __init__.py  main_window.py  platforms_dialog.py
src/utils/: __init__.py  url_utils.py
tests/: test_downloader.py  test_url_utils.py
