[tool.poetry]
name = "vidleech"
version = "0.1.2"
description = "A modern GUI video downloader powered by yt-dlp"
authors = ["Read <read@example.com>"]
license = "MIT"
repository = "https://github.com/read/vidleech"
keywords = ["video", "downloader", "yt-dlp", "gui", "pyqt6"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
pyqt6 = "^6.6.1"
yt-dlp = "2025.01.26"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
pyinstaller = "^6.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q"
